# InMind

./: .gitignore  README.md  docker-compose.yml  dockerfile  env.example  pyproject.toml
backend/: dockerfile  pyproject.toml  pytest.ini
backend/scripts/: test_api.py
backend/src/: main.py
backend/src/api/: __init__.py  dependencies.py  middleware.py
backend/src/api/routes/: __init__.py  chat.py  health.py  intent.py  product.py
backend/src/api/schemas/: __init__.py  chat.py  intent.py  product.py
backend/src/application/services/: __init__.py  context_retrieval.py  conversation_manager.py  intent_detector.py  product_ingestion.py  prompt_template.py  rag_pipeline.py  text_chunker.py
backend/src/domain/models/: __init__.py  conversation_state.py  memory.py  product.py  rag.py
backend/src/domain/repositories/: __init__.py  conversation_state_repository.py  embedding_repository.py  product_repository.py  user_repository.py  vector_repository.py
backend/src/domain/value_objects/: __init__.py  entities.py
backend/src/infrastructure/config/: settings.py
backend/src/infrastructure/conversation/: __init__.py  in_memory_memory_repository.py  in_memory_state_repository.py
backend/src/infrastructure/embedding/: __init__.py  ollama_embedder.py
backend/src/infrastructure/llm/: __init__.py  ollama_client.py
backend/src/infrastructure/vector_store/: __init__.py  chroma_repository.py
backend/tests/application/: test_conversation_manager.py  test_intent_detector.py  test_product_ingestion.py  test_rag_pipeline.py  test_text_chunker.py
backend/tests/domain/: test_conversation_state.py  test_memory.py  test_product.py
backend/tests/infrastructure/: test_chroma_repository.py  test_in_memory_memory_repository.py  test_in_memory_state_repository.py  test_ollama_embedder.py
backend/tests/integration/: __init__.py  test_api_chat.py  test_api_intent.py  test_api_product.py
frontend/: Dockerfile  README.md  index.html  nginx.conf
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatInput.css  ChatInput.tsx  ChatMessage.css  ChatMessage.tsx  ChatWindow.css  ChatWindow.tsx
frontend/src/services/: api.service.ts
frontend/src/types/: api.types.ts
src/: main.py
src/domain/: __init__.py  identifiers.py
src/domain/models/: __init__.py  conversation.py  intent.py  user.py
src/domain/repositories/: __init__.py  conversation_repository.py
src/domain/value_objects/: __init__.py
tests/domain/: test_conversation.py  test_intent.py  test_user.py
